# procoaching_custom_hr

./: LICENSE  README.md  pyproject.toml  setup.py
procoaching_custom_hr/: __init__.py  hooks.py  modules.txt
procoaching_custom_hr/overrides/: __init__.py  roster_override.py
procoaching_custom_hr/public/js/: roster_error_guard.js
