[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "procoaching_custom_hr"
authors = [
    {name = "Pro Coaching", email = "info@pro-coaching.co.uk"}
]
dynamic = ["version", "description"]
dependencies = [
    "frappe"
]

[tool.bench.dev-dependencies]
```

4. Click **"Commit changes..."** → **"Commit changes"**

---

## **STEP 3: Create `requirements.txt` (Root Level)**

1. Click **"Add file"** → **"Create new file"**
2. Filename: `requirements.txt`
3. **Paste this code:**
```
frappe
