[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "procoaching_custom_hr"
version = "0.0.1"
authors = [
    {name = "Pro Coaching", email = "info@pro-coaching.co.uk"}
]
description = "Custom HR modifications for Pro Coaching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[project.urls]
Home = "https://github.com/Gunasekhar17/procoaching_custom_hr"

[tool.bench.dev-dependencies]
